tests/ui/item-is-not-a-function.rs
use contracts::contracts;

#[contracts]
struct S;

fn main() {}
